Finished all of 1.2.4, however I don't have the sounds folder so I couldn't link it to the "raw" folder. I think that's why the word 'raw' in lines 29-31 in SynthesizerActivity.java have errors, but I'm not sure.

--- a/app/src/main/res/layout/activity_synthesizer.xml
+++ b/app/src/main/res/layout/activity_synthesizer.xml
@@ -4,15 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:context=".SynthesizerActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/eButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:onClick="onButton1Click"
+        android:text="@string/eButton"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/fButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onButton2Click"
+        android:text="@string/fButton"
+        app:layout_constraintStart_toStartOf="@+id/eButton"
+        app:layout_constraintTop_toBottomOf="@+id/eButton" />
+
+    <Button
+        android:id="@+id/xButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onButton3Click"
+        android:text="@string/xButton"
+        app:layout_constraintStart_toStartOf="@+id/fButton"
+        app:layout_constraintTop_toBottomOf="@+id/fButton" />
 
 </android.support.constraint.ConstraintLayout>
